adding code for ListNeighbor endpoint (#26569)
